@@ -713,6 +713,9 @@ Release 2.8.0 - UNRELEASED
     YARN-3963. AddNodeLabel on duplicate label addition shows success.
     (Bibin A Chundatt via wangda)
 
+    YARN-3971. Skip RMNodeLabelsManager#checkRemoveFromClusterNodeLabelsOfQueue 
+    on nodelabel recovery. (Bibin A Chundatt via wangda)
+
 Release 2.7.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
